--- a/client/src/Components/Style/Fournisseurs.css
+++ b/client/src/Components/Style/Fournisseurs.css
@@ -10,7 +10,7 @@
 
 .ligne1 {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content:space-around;
     margin: auto;
