--- a/client/src/Components/Style/Commande.css
+++ b/client/src/Components/Style/Commande.css
@@ -1,87 +1,9 @@
-.Box-user {
-    display: flex;
-    flex-direction: row;
-    background-color: #dbdddb;
-    max-width: 800px;
-    border-style: double;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 20px;
-    margin : 5px 0px;
-}
 
-.Box-user-details {
-    display: flex;
-    justify-content: space-around;
-    align-content: center;
-}
-
-
-
-.wraper {
-    display: flex;
-    justify-content: space-evenly;
-    
-}
-
-.main-content {
+.container-m {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px 0px;
  
-    flex-direction: column;
-    justify-content:center;
-    align-items: center;
-    margin: 20px auto;
-    flex:1;
-   
-    
-}
-.sidebar-ajout{
-   
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(161, 214, 186);
-    height: 125px;
-    max-width: 350px;
-    flex :3;
-    order:2;
-    margin: 20px 0px;
-    border-style: solid 5px;
-    
-   
-   
-}
-
-.title-action {
-    color: rgb(117, 114, 114);
-    padding: 20px;
-    font-size: large;
-
-}
-
-
-@media screen and (max-width:920px) {
-
-   
-    .ligne1 {
-        display: flex;
-        flex-direction: column;
-        justify-content:space-around;
-        align-items: center;
-        margin-bottom: 20px;
-        background-color: lightgreen;
-        
-    }
-
-    .ligne1 .Container {
-        display: flex;
-        flex-direction: column;
-        background-color: #8cfff9;
-        max-width: 350px;
-        border-style:  dashed;
-        align-items: center;
-        justify-content:space-between;
-        
-    }
-
 }
